增加关键字筛选功能

--- a/Directory Scanner/Directory Scanner.csproj
+++ b/Directory Scanner/Directory Scanner.csproj
@@ -50,7 +50,7 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <PropertyGroup>
-    <SignManifests>true</SignManifests>
+    <SignManifests>false</SignManifests>
   </PropertyGroup>
   <PropertyGroup>
     <ManifestCertificateThumbprint>02176D9EEA7ABC7F0922C85029853A40D44A86C6</ManifestCertificateThumbprint>
